[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Demo.gd" type="Script" id=2]
[ext_resource path="res://scenes/GameUi.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/BRPG_Assault_FULL_Loop.wav" type="AudioStream" id=4]

[node name="Demo" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1026, 602 )

[node name="MainCamera" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="BackgroundLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="tree_exiting" from="Player" to="." method="_on_Knight_tree_exiting"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="finished" from="BackgroundLoop" to="." method="_on_BackgroundLoop_finished"]
